refactor: 移除页面中的max-w-[375px]限制以适配不同屏幕宽度

--- a/医生/index.html
+++ b/医生/index.html
@@ -83,9 +83,9 @@
     </style>
 </head>
 <body>
-    <div class="w-full max-w-[375px] mx-auto min-h-screen bg-[#F9FAFB] relative pb-[60px]">
+    <div class="w-full  mx-auto min-h-screen bg-[#F9FAFB] relative pb-[60px]">
         <!-- 顶部导航 -->
-        <div class="w-full h-[56px] flex justify-between items-center px-4 shadow-[0px_1px_2px_0px_rgba(0,0,0,0.05)] bg-white fixed top-0 left-0 right-0 max-w-[375px] mx-auto z-50">
+        <div class="w-full h-[56px] flex justify-between items-center px-4 shadow-[0px_1px_2px_0px_rgba(0,0,0,0.05)] bg-white fixed top-0 left-0 right-0  mx-auto z-50">
             <div class="flex items-center">
                 <span class="text-[#8E4337] text-xl font-['Pacifico'] leading-7">logo</span>
             </div>
@@ -576,7 +576,7 @@
         </div>
 
         <!-- 底部导航 -->
-        <div class="w-full max-w-[375px] h-[60px] flex justify-around items-center bg-white border-t border-[#E5E7EB] fixed bottom-0 left-0 right-0 mx-auto z-50">
+        <div class="w-full  h-[60px] flex justify-around items-center bg-white border-t border-[#E5E7EB] fixed bottom-0 left-0 right-0 mx-auto z-50">
             <button class="nav-item flex flex-col items-center gap-1 cursor-pointer text-[#8E4337]" data-tab="tabHome">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 23 20" class="w-[22px] h-5">
                     <g transform="matrix(1,0,0,-1,0,40.0078125)">
