--- a/医生/consultation-setup.html
+++ b/医生/consultation-setup.html
@@ -86,12 +86,12 @@
     </style>
 </head>
 <body class="bg-[#F9FAFB]">
-    <div class="w-full max-w-[375px] mx-auto min-h-screen bg-[#F9FAFB] relative pb-24">
+    <div class="w-full  mx-auto min-h-screen bg-[#F9FAFB] relative pb-24">
         <!-- Toast 通知 -->
         <div id="toast" class="toast"></div>
 
         <!-- 顶部导航 -->
-        <div class="w-full h-14 flex items-center justify-between px-4 bg-white border-b border-[#E5E7EB] fixed top-0 left-0 right-0 max-w-[375px] mx-auto z-50">
+        <div class="w-full h-14 flex items-center justify-between px-4 bg-white border-b border-[#E5E7EB] fixed top-0 left-0 right-0  mx-auto z-50">
             <button 
                 class="w-10 h-10 flex items-center justify-center -ml-2"
                 onclick="handleBack()"
@@ -255,7 +255,7 @@
         </div>
 
         <!-- 底部按钮 -->
-        <div class="w-full max-w-[375px] fixed bottom-0 left-0 right-0 mx-auto bg-white/95 backdrop-blur-sm border-t border-[#E5E7EB] p-4 z-50">
+        <div class="w-full  fixed bottom-0 left-0 right-0 mx-auto bg-white/95 backdrop-blur-sm border-t border-[#E5E7EB] p-4 z-50">
             <div class="flex gap-3">
                 <button 
                     class="flex-1 py-3 border-2 border-[#8E4337] rounded text-[#8E4337] text-sm font-medium leading-5 cursor-pointer hover:bg-[#8E4337] hover:text-white transition-all active:scale-98 flex items-center justify-center gap-2"
